SERVER-78813: Fix commit point propagation for exhaust oplog cursors

(cherry picked from commit 12f70e5fdff32cd733d1fde7a651bdfbae389e8b)