src/mongo/db/query/plan_executor.h
@@ -52,8 +52,12 @@ class RecordId;
  * 'clientsLastKnownCommittedOpTime' represents the time passed to the getMore command.
  * If the replication coordinator ever reports a higher committed op time, we should stop waiting
  * for inserts and return immediately to speed up the propagation of commit level changes.
+ *
+ * A boost::none value opts out of the commit point propagation. A null optime compares less than
+ * any non-null optimes and thus will always trigger an empty batch for commit point propagation.
  */
-extern const OperationContext::Decoration<repl::OpTime> clientsLastKnownCommittedOpTime;
+extern const OperationContext::Decoration<boost::optional<repl::OpTime>>
+    clientsLastKnownCommittedOpTime;
 
 /**
  * If a plan yielded because it encountered a sharding critical section,
